lox-tests/tests/super/super_without_dot.stderr
ERROR: Expected '.' after 'super'
 --> 6:5
  |
6 |     super;
  |     ^----^
